Don't reset the query when reloading a resource

We don't have to call reset query here, because reloading a resource
doesn't change any database content.

BUG:446146